--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "create-wasm-app",
+  "name": "boardico-app",
   "version": "0.1.0",
-  "description": "create an app to consume rust-generated wasm packages",
+  "description": "boardico app",
   "main": "index.js",
   "bin": {
-    "create-wasm-app": ".bin/create-wasm-app.js"
+    "create-wasm-app": ".bin/boardico-app.js"
   },
   "scripts": {
     "build": "webpack --config webpack.config.js",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rustwasm/create-wasm-app.git"
+    "url": "git+https://github.com/counterkitten/boardico-js.git"
   },
   "keywords": [
     "webassembly",
@@ -20,12 +20,12 @@
     "rust",
     "webpack"
   ],
-  "author": "Ashley Williams <ashley666ashley@gmail.com>",
+  "author": "Keith Downie <dinaitius@msn.com>",
   "license": "(MIT OR Apache-2.0)",
   "bugs": {
-    "url": "https://github.com/rustwasm/create-wasm-app/issues"
+    "url": "https://github.com/counterkitten/boardico-js/issues"
   },
-  "homepage": "https://github.com/rustwasm/create-wasm-app#readme",
+  "homepage": "http://counterkitten.com",
   "devDependencies": {
     "hello-wasm-pack": "^0.1.0",
     "webpack": "^4.16.3",
