--- a/package.json
+++ b/package.json
@@ -25,12 +25,16 @@
   "bugs": {
     "url": "https://github.com/counterkitten/boardico-js/issues"
   },
-  "homepage": "http://counterkitten.com",
+  "homepage": "counterkitten.com",
   "devDependencies": {
     "hello-wasm-pack": "^0.1.0",
     "webpack": "^4.16.3",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5",
     "copy-webpack-plugin": "^4.5.2"
+  },
+  "dependencies": {
+    "jquery": "^3.3.1",
+    "jquery-touch-events": "git+https://github.com/benmajor/jQuery-Touch-Events.git"
   }
 }
