--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "copy-webpack-plugin": "^4.5.2"
   },
   "dependencies": {
+    "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
-    "jquery-touch-events": "git+https://github.com/benmajor/jQuery-Touch-Events.git"
+    "paper": "^0.12.0"
   }
 }
